--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,18 +1,32 @@
 Package: cfbplotR
-Title: What the Package Does (One Line, Title Case)
+Title: CFB Logo Plots in 'ggplot2'
 Version: 0.0.0.9000
 Authors@R: 
-    person(given = "First",
-           family = "Last",
+    person(given = "Sebastian",
+           family = "Carl",
            role = c("aut", "cre"),
-           email = "first.last@example.com",
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+           email = "mrcaseb@gmail.com")
+    person(given = "Jared",
+           family = "Lee",
+           role = c("aut", "cre"),
+           email = "13jaredlee@gmail.com")
+           
+Description: A set of functions to visualize College Football analysis in 'ggplot2'.
+URL: https://github.com/Kazink36/cfbplotR
+BugReports: https://github.com/Kazink36/cfbplotR/issues
+Depends: 
+    R (>= 3.2)
+Imports: 
+    cli (>= 3.0.0),
+    ggplot2 (>= 3.3.0),
+    grid,
+    magick (>= 2.7.3),
+    magrittr (>= 2.0.0),
+    rlang (>= 0.4.11)
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
-Depends: 
-    R (>= 2.10)
