--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,8 +1,9 @@
 pandoc: 2.11.2
 pkgdown: 1.6.1
 pkgdown_sha: ~
-articles: {}
-last_built: 2021-09-09T05:52Z
+articles:
+  tutorial: tutorial.html
+last_built: 2021-09-09T22:48Z
 urls:
   reference: https://Kazink36.github.io/cfbplotR//reference
   article: https://Kazink36.github.io/cfbplotR//articles
