Added axis logos

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,10 @@ export(gt_fmt_cfb)
 export(scale_color_cfb)
 export(scale_colour_cfb)
 export(scale_fill_cfb)
+export(scale_x_cfb)
+export(scale_y_cfb)
+export(theme_x_cfb)
+export(theme_y_cfb)
 export(valid_team_names)
 import(gt)
 importFrom(gt,"%>%")
