--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,4 +13,5 @@ export(theme_x_cfb)
 export(theme_y_cfb)
 export(valid_team_names)
 import(gt)
+importFrom(grDevices,col2rgb)
 importFrom(gt,"%>%")
