--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,6 @@ export(scale_y_cfb)
 export(theme_x_cfb)
 export(theme_y_cfb)
 export(valid_team_names)
-import(gt)
 importFrom(grDevices,col2rgb)
 importFrom(gt,"%>%")
+importFrom(rlang,.data)
