--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,7 @@ Authors@R:
            email = "13jaredlee@gmail.com")
      )
 Description: A set of functions to visualize College Football analysis in 'ggplot2'.
-URL: https://github.com/Kazink36/cfbplotR
+URL: https://kazink36.github.io/cfbplotR, https://github.com/Kazink36/cfbplotR
 BugReports: https://github.com/Kazink36/cfbplotR/issues
 Depends: 
     R (>= 3.2)
