--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -55,12 +55,18 @@ navbar:
       - text: "Plots"
       - text: "Plot Logos"
         href: reference/geom_cfb_logos.html
+      - text: "Plot Headshots"
+        href: reference/geom_cfb_headshots.html
       - text: "Add Median Lines"
         href: reference/geom_median_lines.html
       - text: "Team Colors"
         href: reference/scale_color_cfb.html
       - text: "Axis Logos"
         href: reference/scale_axes_cfb.html
+      - text: --------------------------------
+      - text: "Premade Plots"
+      - text: "Team Tiers"
+        href: reference/cfb_team_tiers.html
       - text: --------------------------------
       - text: "Tables"
       - text: "Add Logos"
@@ -70,13 +76,8 @@ navbar:
       - text: "Valid Names"
         href: reference/valid_team_names.html
     articles:
-      icon: "fas fa-book-reader"
-      text: "Articles"
-      menu:
-      - text: Vignettes
-        href: articles/index.html
-      - text: Using cfbplotR
-        href: articles/tutorial.html
+      text: "Intro"
+      href: articles/tutorial.html
     network:
       icon: "fas fa-project-diagram"
       text: SDV
@@ -97,8 +98,14 @@ navbar:
         href: https://puntalytics.github.io/puntr
       - text: gamezoneR
         href: https://jacklich10.github.io/gamezoneR/
-      # - text: baseballr
-      #   href: https://saiemgilani.github.io/baseballr/
+      - text: cfb4th
+        href: https://kazink36.github.io/cfb4th/
+      - text: worldfootballR
+        href: https://jaseziv.github.io/worldfootballR/
+      - text: hockeyR
+        href: https://hockeyr.netlify.app/
+      - text: baseballr
+        href: https://saiemgilani.github.io/baseballr/
       - text: --------------------------------
       - text: Python Packages
       - text: cfbfastR-py
@@ -111,6 +118,8 @@ navbar:
       - text: Node.js Packages
       - text: sportsdataverse.js
         href: https://saiemgilani.github.io/sportsdataverse/
+      - text: nfl-nerd
+        href: https://github.com/nntrn/nfl-nerd/
     github:
       icon: "fab fa-github fa-lg"
       href: https://github.com/Kazink36/cfbplotR/
