added headshot support and helper functions for 0.0.0.9010

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,18 +2,23 @@
 
 export(GeomCFBheads)
 export(GeomCFBlogo)
+export(add_athlete_id_col)
 export(cfb_team_tiers)
+export(clean_school_names)
 export(geom_cfb_headshots)
 export(geom_cfb_logos)
 export(geom_mean_lines)
 export(geom_median_lines)
 export(ggpreview)
-export(gt_fmt_cfb)
+export(gt_fmt_cfb_headshot)
+export(gt_fmt_cfb_logo)
 export(scale_color_cfb)
 export(scale_colour_cfb)
 export(scale_fill_cfb)
 export(scale_x_cfb)
+export(scale_x_cfb_headshots)
 export(scale_y_cfb)
+export(scale_y_cfb_headshots)
 export(theme_x_cfb)
 export(theme_y_cfb)
 export(valid_team_names)
