--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -57,12 +57,16 @@ navbar:
         href: reference/geom_cfb_logos.html
       - text: "Plot Headshots"
         href: reference/geom_cfb_headshots.html
+      - text: "Plot from Path"
+        href: reference/geom_from_path.html
       - text: "Add Median Lines"
         href: reference/geom_median_lines.html
       - text: "Team Colors"
         href: reference/scale_color_cfb.html
       - text: "Axis Logos"
         href: reference/scale_axes_cfb.html
+      - text: "Axis Image Elements"
+        href: reference/element.html
       - text: --------------------------------
       - text: "Premade Plots"
       - text: "Team Tiers"
@@ -71,6 +75,8 @@ navbar:
       - text: "Tables"
       - text: "Add Logos/Headshots"
         href: reference/gt_cfb.html
+      - text: "Merge Columns with Team Color"
+        href: reference/gt_stack_team.html
       - text: --------------------------------
       - text: "Utilties"
       - text: "Valid Names"
@@ -85,40 +91,40 @@ navbar:
       href: articles/tutorial.html
     network:
       icon: "fas fa-project-diagram"
-      text: SDV
+      text: " SDV"
       menu:
       - text: SportsDataverse
         href: https://sportsdataverse.org/
       - text: --------------------------------
       - text: R Packages
+      - text: sportsdataverse-R
+        href: https://saiemgilani.github.io/sportsdataverse-R/
       - text: cfbfastR
         href: https://saiemgilani.github.io/cfbfastR/
       - text: hoopR
         href: https://hoopR.sportsdataverse.org/
       - text: wehoop
         href: https://wehoop.sportsdataverse.org/
-      - text: recruitR
-        href: https://saiemgilani.github.io/recruitR/
-      - text: puntr
-        href: https://puntalytics.github.io/puntr
-      - text: gamezoneR
-        href: https://jacklich10.github.io/gamezoneR/
-      - text: cfb4th
-        href: https://kazink36.github.io/cfb4th/
+      - text: fastRhockey
+        href: https://BenHowell71.github.io/fastRhockey/
       - text: worldfootballR
         href: https://jaseziv.github.io/worldfootballR/
-      - text: hockeyR
-        href: https://hockeyr.netlify.app/
       - text: baseballr
-        href: https://saiemgilani.github.io/baseballr/
+        href: https://BillPetti.github.io/baseballr/
+      - text: cfbplotR
+        href: https://kazink36.github.io/cfbplotR/
+      - text: cfb4th
+        href: https://kazink36.github.io/cfb4th/
+      - text: recruitR
+        href: https://saiemgilani.github.io/recruitR/
+      - text: gamezoneR
+        href: https://jacklich10.github.io/gamezoneR/
+      - text: puntr
+        href: https://puntalytics.github.io/puntr/
       - text: --------------------------------
       - text: Python Packages
-      - text: cfbfastR-py
-        href: https://cfbfastR-py.sportsdataverse.org/
-      - text: hoopR-py
-        href: https://hoopR-py.sportsdataverse.org/
-      - text: wehoop-py
-        href: https://wehoop-py.sportsdataverse.org/
+      - text: sportsdataverse-py
+        href: https://py.sportsdataverse.org/
       - text: --------------------------------
       - text: Node.js Packages
       - text: sportsdataverse.js
