add `ggtitle_image()` and `theme_title_image()` functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(geom_from_path)
 export(geom_mean_lines)
 export(geom_median_lines)
 export(ggpreview)
+export(ggtitle_image)
 export(gt_fmt_cfb_headshot)
 export(gt_fmt_cfb_logo)
 export(gt_merge_stack_team_color)
@@ -31,6 +32,7 @@ export(scale_x_cfb)
 export(scale_x_cfb_headshots)
 export(scale_y_cfb)
 export(scale_y_cfb_headshots)
+export(theme_title_image)
 export(theme_x_cfb)
 export(theme_y_cfb)
 export(valid_team_names)
