--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -1,9 +1,12 @@
 # Workflow derived from https://github.com/r-lib/actions/tree/master/examples
 # Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
+
 on:
   push:
-    branches: [main, master]
-    tags: ['*']
+    branches:
+      - main
+      - master
+  workflow_dispatch:
 
 name: pkgdown
 
