--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,7 +21,7 @@ Imports:
     cli (>= 3.0.0),
     ggplot2 (>= 3.3.0),
     grid,
-    gridtext (> 0.1.4),
+    gridtext (>= 0.1.4),
     gt,
     magick (>= 2.7.3),
     magrittr (>= 2.0.0),
