--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -1,11 +1,10 @@
 # Workflow derived from https://github.com/r-lib/actions/tree/master/examples
 # Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
-
 on:
   push:
-    branches:
-      - main
-      - master
+    branches: [main, master]
+  release:
+    types: [published]
   workflow_dispatch:
 
 name: pkgdown
@@ -15,7 +14,6 @@ jobs:
     runs-on: ubuntu-latest
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
-      CFBD_API_KEY: ${{ secrets.CFBD_API_KEY }}
     steps:
       - uses: actions/checkout@v2
 
@@ -24,13 +22,29 @@ jobs:
       - uses: r-lib/actions/setup-r@v1
         with:
           use-public-rspm: true
-
+          r-version: 4.1.3
       - uses: r-lib/actions/setup-r-dependencies@v1
         with:
           extra-packages: |
             pkgdown
+            animation
+            baseballr
+            cfbfastR
+            chessR
+            ggimage
+            hoopR
+            knitr
+            pacman
+            ragg
+            remotes
+            rsconnect
+            sportyR
+            tictoc
+            toRvik
+            wehoop
+            zoo
           needs: website
-          
+
       - name: Install system dependencies
         run: |
           pak::pkg_install("sportsdataverse/cfbfastR")
