--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -25,7 +25,7 @@ template:
     btn-border-radius: 0.25rem
   opengraph:
     image:
-      src: "https://raw.githubusercontent.com/sportsdataverse/cfbplotR/main/man/figures/logo.png"
+      src: "https://raw.githubusercontent.com/Kazink36/cfbplotR/master/man/figures/logo.png"
       alt: "cfbplotR social preview card"
     twitter:
       creator: "@JaredDLee"
@@ -114,7 +114,7 @@ navbar:
       - text: SportsDataverse
         href: https://sportsdataverse.org/
       - text: --------------------------------
-      - text: R Packages
+      - text: "R Packages"
       - text: sportsdataverse-R
         href: https://r.sportsdataverse.org/
       - text: cfbfastR
@@ -133,14 +133,16 @@ navbar:
         href: https://jaseziv.github.io/worldfootballR/
       - text: chessR
         href: https://jaseziv.github.io/chessR/
+      - text: oddsapiR
+        href: https://oddsapiR.sportsdataverse.org/
       - text: sportyR
         href: https://sportyR.sportsdataverse.org/
       - text: cfbplotR
         href: https://cfbplotR.sportsdataverse.org/
-      - text: cfb4th
-        href: https://cfb4th.sportsdataverse.org/
       - text: mlbplotR
         href: https://github.com/camdenk/mlbplotR
+      - text: cfb4th
+        href: https://cfb4th.sportsdataverse.org/
       - text: recruitR
         href: https://recruitr.sportsdataverse.org/
       - text: gamezoneR
@@ -148,11 +150,11 @@ navbar:
       - text: puntr
         href: https://puntalytics.github.io/puntr/
       - text: --------------------------------
-      - text: Python Packages
+      - text: "Python Packages"
       - text: sportsdataverse-py
         href: https://py.sportsdataverse.org/
       - text: --------------------------------
-      - text: Node.js Packages
+      - text: "Node.js Packages"
       - text: sportsdataverse.js
         href: https://js.sportsdataverse.org/
       - text: nfl-nerd
