update via urlchecker

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,10 +1,16 @@
-^cfbplotR\.Rproj$
+^.*\.Rproj$
 ^\.Rproj\.user$
-^data-raw$
+^LICENSE\.md$
+^README\.Rmd$
+^\.github$
 ^_pkgdown\.yml$
 ^docs$
+^inst*
 ^pkgdown$
-^LICENSE\.md$
-^\.github$
-^README.Rmd
-^docs$
+^logo$
+^data-raw$
+^pkgdown$
+^logo\.png$
+^vignettes
+^cran-comments\.md$
+^CRAN-RELEASE$
