--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,8 +13,9 @@ Authors@R:
            email = "13jaredlee@gmail.com")
      )
 Description: A set of functions to visualize College Football analysis in 'ggplot2'.
-URL: https://kazink36.github.io/cfbplotR, https://github.com/Kazink36/cfbplotR
-BugReports: https://github.com/Kazink36/cfbplotR/issues
+License: MIT + file LICENSE
+URL: https://cfbplotR.sportsdataverse.org, https://github.com/sportsdataverse/cfbplotR
+BugReports: https://github.com/sportsdataverse/cfbplotR/issues
 Depends: 
     R (>= 3.5.0)
 Imports: 
@@ -42,13 +43,10 @@ Suggests:
     sjmisc (>= 2.8.7),
     testthat (>= 3.0.0),
     tidyr (>= 1.0.0)
-VignetteBuilder: 
-    knitr
 Remotes:
     wilkelab/gridtext
-Config/testthat/edition: 3
 Encoding: UTF-8
-LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.0
-License: MIT + file LICENSE
+Config/testthat/edition: 3
+LazyData: true
