update pkgdown to include plausible, additional packages

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -3,6 +3,9 @@ url: https://cfbplotr.sportsdataverse.org/
 template:
   bootstrap: 5
   bootswatch: cosmo
+  includes:
+    in_header: |
+      <script defer data-domain="cfbplotr.sportsdataverse.org" src="https://plausible.io/js/plausible.js"></script>
   bslib:
     primary: "#222222"
     secondary: "#222222"
@@ -25,7 +28,7 @@ template:
     btn-border-radius: 0.25rem
   opengraph:
     image:
-      src: "https://raw.githubusercontent.com/Kazink36/cfbplotR/master/man/figures/logo.png"
+      src: "https://raw.githubusercontent.com/sportsdataverse/cfbplotR/main/man/figures/logo.png"
       alt: "cfbplotR social preview card"
     twitter:
       creator: "@JaredDLee"
@@ -38,6 +41,8 @@ authors:
     href: https://twitter.com/mrcaseb
   Jared Lee:
     href: https://twitter.com/JaredDLee
+  Saiem Gilani:
+    href: https://twitter.com/saiemgilani
 
 
 navbar:
@@ -123,36 +128,56 @@ navbar:
         href: https://hoopR.sportsdataverse.org/
       - text: wehoop
         href: https://wehoop.sportsdataverse.org/
-      - text: toRvik
-        href: https://torvik.dev/
       - text: fastRhockey
         href: https://fastRhockey.sportsdataverse.org/
+      - text: hockeyR
+        href: https://hockeyr.netlify.app/
+      - text: ggshakeR
+        href: https://abhiamishra.github.io/ggshakeR/
       - text: baseballr
         href: https://BillPetti.github.io/baseballr/
       - text: worldfootballR
         href: https://jaseziv.github.io/worldfootballR/
+      - text: usfootballR
+        href: https://usfootballR.sportsdataverse.org/
+      - text: soccerAnimate
+        href: https://github.com/Dato-Futbol/soccerAnimate/
       - text: chessR
         href: https://jaseziv.github.io/chessR/
       - text: oddsapiR
         href: https://oddsapiR.sportsdataverse.org/
       - text: sportyR
         href: https://sportyR.sportsdataverse.org/
+      - text: toRvik
+        href: https://torvik.dev/
       - text: cfbplotR
         href: https://cfbplotR.sportsdataverse.org/
       - text: mlbplotR
-        href: https://github.com/camdenk/mlbplotR
+        href: https://camdenk.github.io/mlbplotR/
+      - text: softballR
+        href: https://github.com/sportsdataverse/softballR/
       - text: cfb4th
         href: https://cfb4th.sportsdataverse.org/
-      - text: recruitR
-        href: https://recruitr.sportsdataverse.org/
+      - text: nwslR
+        href: https://github.com/nwslR/nwslR/
       - text: gamezoneR
         href: https://jacklich10.github.io/gamezoneR/
+      - text: recruitR
+        href: https://recruitr.sportsdataverse.org/
       - text: puntr
         href: https://puntalytics.github.io/puntr/
       - text: --------------------------------
       - text: "Python Packages"
       - text: sportsdataverse-py
         href: https://py.sportsdataverse.org/
+      - text: sportypy
+        href: https://sportypy.sportsdataverse.org/
+      - text: nwslpy
+        href: https://github.com/nwslR/nwslpy/
+      - text: recruitR-py
+        href: https://github.com/sportsdataverse/recruitR-py/
+      - text: collegebaseball
+        href: https://github.com/nathanblumenfeld/collegebaseball/
       - text: --------------------------------
       - text: "Node.js Packages"
       - text: sportsdataverse.js
