linting, removing self-package-calls, adding rd tags, url updates

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,6 @@ S3method(element_grob,element_cfb_headshot)
 S3method(element_grob,element_cfb_logo)
 S3method(element_grob,element_cfb_wordmark)
 S3method(element_grob,element_path)
-S3method(grobHeight,axisImageGrob)
-S3method(grobWidth,axisImageGrob)
 export(GeomCFBheads)
 export(GeomCFBlogo)
 export(GeomCFBwordmark)
@@ -26,6 +24,8 @@ export(geom_mean_lines)
 export(geom_median_lines)
 export(ggpreview)
 export(ggtitle_image)
+export(grobHeight.axisImageGrob)
+export(grobWidth.axisImageGrob)
 export(gt_fmt_cfb_headshot)
 export(gt_fmt_cfb_logo)
 export(gt_fmt_cfb_wordmark)
@@ -42,8 +42,8 @@ export(theme_x_cfb)
 export(theme_y_cfb)
 export(valid_team_names)
 import(dplyr)
-import(grid)
 import(gt)
+importFrom(base64enc,base64encode)
 importFrom(ggplot2,element_grob)
 importFrom(glue,glue)
 importFrom(gt,"%>%")
