--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -32,10 +32,10 @@ jobs:
           - {os: ubuntu-latest,   r: 'oldrel-1'}
 
     env:
+      R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
-      KP_USER: ${{ secrets.KP_USER }}
-      KP_PW: ${{ secrets.KP_PW }}
-      R_KEEP_PKG_SOURCE: yes
+      CFBD_API_KEY: ${{ secrets.CFBD_API_KEY }}
+      RSPM: "https://packagemanager.rstudio.com/cran/__linux__/jammy/latest"
 
     steps:
       - uses: actions/checkout@v3
